# Venv-Project-Templates

./: LICENSE  README.md  README_venv_template_generator.md  RUNME.BAT  doctor.bat  pip.bat  pyproject.toml  run.bat  run_cli.py  run_gui.py  shell.bat  venv_template_generator.py
venv_bat_gen/: __init__.py  __main__.py  cli.py  core.py  gui.py
