[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venv-bat-gen"
version = "3.3.0"
description = "Generate project-local venv helper scripts (.bat + .sh) for Windows, WSL, macOS, and Linux."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "KeystoneAI", email = "hello@keystoneai.dev" },
]
keywords = [
    "venv",
    "virtualenv",
    "batch",
    "windows",
    "developer-tools",
    "uv",
    "python-tooling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
venv-bat-gen = "venv_bat_gen.cli:main"

[project.gui-scripts]
venv-bat-gen-gui = "venv_bat_gen.gui:main"

[project.urls]
Homepage = "https://github.com/keystoneai/venv-bat-gen"
Repository = "https://github.com/keystoneai/venv-bat-gen"
"Bug Tracker" = "https://github.com/keystoneai/venv-bat-gen/issues"

[tool.hatch.build.targets.wheel]
packages = ["venv_bat_gen"]

[tool.hatch.build.targets.sdist]
include = [
    "venv_bat_gen/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
